# bo_energo

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
bo_energo/: loggg.py  main.py
bo_energo/api/: exc.py  routes.py
bo_energo/api/v1/: __init__.py  task_1.py  task_2.py
bo_energo/enums/: color.py
bo_energo/schemas/: task_1.py  task_2.py
bo_energo/services/: equation.py
bo_energo/tests/: conftest.py
bo_energo/tests/api/: test_color.py  test_equation.py
